[package]
name = "flood"
version = "0.1.0"
authors = ["Zhipeng Jia <zhipeng.jia@outlook.com>"]
edition = "2018"

[dependencies]
log = "0.4.14"
rand = "0.7.3"
env_logger = "0.7.1"
structopt = "0.3.25"
humantime = "2.0.1"
mio = { version = "0.7.14", features = ["os-poll", "os-util", "tcp"] } 
bytes = "0.5.6"
quick-js = "0.3.6"
httparse = "1.3.6"
timerfd = "1.1.1"
libc = "0.2.112"
hdrhistogram = "7.1.0"
zstd = "0.5.4"
