[package]
name = "flood"
version = "0.1.0"
authors = ["Zhipeng Jia <zhipeng.jia@outlook.com>"]
edition = "2018"

[dependencies]
log = "0.4.14"
rand = "0.8.4"
env_logger = "0.9.0"
structopt = "0.3.25"
humantime = "2.1.0"
mio = { version = "0.7.14", features = ["os-poll", "os-util", "tcp"] } 
bytes = "1.1.0"
quick-js = "0.4.1"
httparse = "1.5.1"
timerfd = "1.2.0"
libc = "0.2.112"
hdrhistogram = "7.4.0"
zstd = "0.9.1"
